Fixed newsbanner showing second item instead of the first. Fixed overflowing text on the newsbanner items.

--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -150,3 +150,8 @@ div.sharethis-wrapper {
 .programs-content-right p {
     margin-bottom: 0px;
 }
+
+div.text-bottom-item {
+    height: 44px;
+    overflow: hidden;
+}
